[gd_scene load_steps=4 format=2]

[ext_resource path="res://3D/Ennemies/Bullet/Scripts/Bullet.gd" type="Script" id=1]

[sub_resource type="SphereShape" id=1]
margin = 0.001
radius = 0.04

[sub_resource type="SphereMesh" id=2]
radius = 0.04
height = 0.08
radial_segments = 8
rings = 8

[node name="Bullet" type="Spatial"]
script = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 20.0
one_shot = true
autostart = true

[node name="BulletRB" type="RigidBody" parent="."]
collision_layer = 4
mode = 3
mass = 0.0459184
gravity_scale = 0.0
continuous_cd = true
contacts_reported = 5
contact_monitor = true
can_sleep = false

[node name="CollisionShape" type="CollisionShape" parent="BulletRB"]
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="BulletRB"]
mesh = SubResource( 2 )
material/0 = null
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="BulletRB" to="." method="_on_BulletRB_body_entered"]
